# Devsync

./: .gitignore  CONTRIBUTING.md  Dockerfile.backend  LICENSE  README.md  SECURITY.md  docker-compose.alpha.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: __init__.py
configs/: backend.example.env
desktop/: __init__.py
devsync/: __init__.py  chunks.py  cli.py  ignore.py  scanner.py  snapshots.py  syncer.py  timeutil.py  watcher.py  workspace.py
docs/: CLOUD_RUN_DEPLOYMENT_GUIDE.md  DEMO_SCRIPT.md  IMPLEMENTATION_STATUS.md  KNOWN_LIMITATIONS.md  NEON_POSTGRES_SETUP.md  PHASE_10_PRIVATE_ALPHA_RELEASE.md  PHASE_2_AUTHENTICATION.md  PHASE_3_WORKSPACE_MANAGEMENT.md  PHASE_4_DEVICE_REGISTRATION.md  PHASE_5_SYNCHRONIZATION_PROTOCOL.md  PHASE_6_FILE_STORAGE_AND_VERSIONING.md  PHASE_7_WEBSOCKET_REALTIME_GATEWAY.md  PHASE_8_DESKTOP_SYNC_CLIENT_MVP.md  PHASE_9_PRODUCTION_HARDENING.md  PRIVATE_ALPHA_TESTING_GUIDE.md  PUBLIC_BETA_CHECKLIST.md  PUBLIC_BETA_GUIDE.md  R2_SETUP_GUIDE.md  RENDER_DEPLOYMENT_GUIDE.md  SECURITY_NOTES.md  TROUBLESHOOTING_GUIDE.md
outputs/: DevSync-Architecture.md  DevSync-Cloud-Phase-1-Architecture.md  DevSync-Desktop-UX-Design.md  DevSync-Phase-1-Architecture.md
scripts/: alpha_clean_install_check.py  build_windows_exe.ps1  deploy_cloud_run.ps1  public_beta_check.py  run_neon_migrations.ps1  two_folder_reliability_smoke.py
server/: .env.alpha.example  .env.beta.example  .env.beta.yaml.example  .env.example  .env.production.example  __init__.py  alembic.ini
tests/: __init__.py  test_alpha_release_files.py  (+1 more)
(+146 files in other folders)
